Add input validation, refactor findSender, modernize stream collection
- Add Bean Validation to NotificationRequest: @NotNull on type/channel,
  @NotBlank on recipient; add @Valid to controller parameter
- Add 4 tests verifying 400 response for missing required fields
- Refactor findSender() to throw IllegalStateException via orElseThrow()
  instead of returning null; remove caller's null-check
- Replace 11 occurrences of .collect(Collectors.toList()) with .toList()
  (Java 16+ idiomatic stream collection)